# python_devcontainers

./: .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  biome.json  lefthook.yml  package.json  pyproject.toml  ruff.toml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  onCreate.sh  onCreateCommand.sh  postAttach.sh
.lefthook/commit-msg/: add-branch-name.sh
PythonProject/: sample.py
python_project/: sample.py
src/: index.ts  sample.ts
tests/: test_sample.py
